# Scout

./: .dockerignore  .gitignore  AUTHORS.md  CONTRIBUTORS.md  Dockerfile  README.md  default_config.toml  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_compose.txt  setup.cfg
src/Nerris/: __init__.py  config.py  enums.py  exceptions.py  nerris.py
src/Nerris/core/nationstates/: nsverify.py
src/Nerris/database/: db.py  discord.py  exceptions.py  models.py  nationstates.py  ns_verify.py  tables.py
src/Nerris/nationstates/: nation.py  ns.py  region.py
src/Nerris/ns_api/: nation.py  ns.py
src/Scout/: __init__.py  config.py  exceptions.py  localization.py  scout.py
src/Scout/alembic/: alembic.ini
src/Scout/core/nationstates/: nationstates.py  nsverify.py
src/Scout/core/translations/: translations.py
src/Scout/database/: base.py  db.py  exceptions.py  models.py
src/Scout/ns_api/: exceptions.py  nation.py  ns.py  region.py
src/Scout/nsapi/: constants.py  ns.py
src/Scout/plugins/: dice-rolls.py  simple-bump-leaderboard.py  simple_bump_leaderboard_models.py
tests/: test_nsapi.py
translations/en-US/: commands.ftl  main.ftl  responses.ftl
translations/scout/en-US/: commands.ftl  responses.ftl
translations/scout/pt-PT/: commands.ftl  responses.ftl
