[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "Scout"
dynamic = ["version", "readme"]
authors = [
    {name = "Sapein"}
]
dependencies = [
    "aiodns ~= 3.0.0",
    "aiohttp ~= 3.9.1",
    "aiolimiter ~= 1.1.0",
    "discord.py ~= 2.3.1",
    "sqlalchemy ~= 2.0.25",
    "python-dotenv ~= 1.0.0",
    "fluent.runtime == 0.4.0",
    "xmltodict ~= 0.13.0",
    "returns[compatible-mypy] ~= 0.22.0",
    "alembic",
]

description = "A Discord Bot"
keywords = ["discord", "bot", "discord bot", "the campfire", "nationstates", "ns", "verification", "ns verify"]
requires-python = ">=3.12"
classifiers = [
    "Private :: Do Not Upload",
    "Topic :: Communications",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "pytest",
    "pytest-aiohttp",
    "pycodestyle",
    "mypy",
]
postgres = ["psycopg ~= 3.1.8"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tools.setuptools]
include-package-data = true

[tools.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "Scout.__VERSION__"}
readme = {file = ["README.md", "CHANGELOG.md", "LICENSE.md"], content-type = "text/markdown"}

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]