[metadata]
name = Nerris 
version = attr: Nerris.__VERSION__
author = Sapein
author_email = B
description = A Discord Bot
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = discord, bot, discord bot, the campfire, nationstates, ns, verification, ns verify
license = AGPL v3
classifiers = 
    Private :: Do Not Upload,
    Topic :: Communications,
    Intended Audience :: Developers,
    Programming Language :: Python :: 3,
    License :: OSI Approved :: GNU Affero General Public License v3,
    Development Status :: 2 - Pre-Alpha,
    Environment :: Console,

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.11
install_requires =
    result
    aiohttp
    aiodns
    discord.py
    alembic 
    sqlalchemy >= 2.0.0

[options.package_data]
* = *.txt, *.rst, *.md

# [options.entry_points]
# console_scripts =
# executable_name = Nerris.nerris

[options.extras_require]
dev = 
    sphinx
    pytest
    pycodestyle

[options.packages.find]
where = src
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
